# dsmr-p1

./: README.md
dsmr-p1-demo-transmitter/: .gitignore  README.md  sdkconfig
dsmr-p1-demo-transmitter/main/: CMakeLists.txt  config-sample.h  main.c  utils.h
dsmr-p1-demo-transmitter/main/espnow/: espnow-dsmr.h  send.c  send.h
dsmr-p1-demo-transmitter/main/led/: led.c  led.h
dsmr-p1-demo-transmitter/main/telegram/: telegram.h
dsmr-p1-receiver/: .gitignore  CMakeLists.txt  README.md  sdkconfig
dsmr-p1-receiver/main/: CMakeLists.txt  config-sample.h  config.h  idf_component.yml  main.c
dsmr-p1-receiver/main/espnow/: espnow-dsmr.h  receive.c  receive.h  wifi.c  wifi.h
dsmr-p1-receiver/main/led/: led.c  led.h
dsmr-p1-receiver/main/telegram/: telegram.c  telegram.h
dsmr-p1-receiver/main/websocket/: websocket.c  websocket.h
dsmr-p1-transmitter/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
dsmr-p1-transmitter/main/: CMakeLists.txt  config-sample.h  config.h  main.c
dsmr-p1-transmitter/main/espnow/: espnow-dsmr.h  send.c  send.h
dsmr-p1-transmitter/main/led/: led.c  led.h
dsmr-p1-transmitter/main/spiffs/: datastore.c  datastore.h
dsmr-p1-transmitter/main/telegram/: processData.c  processData.h  telegram.c  telegram.h
dsmr-p1-transmitter/main/uart/: uart.c  uart.h
node-red/: README.md  flow.json
pcb/: BOM.csv  PCB.json  PickAndPlace.csv  Schematic.json  readme.md
